# sectionate

./: README.md  pyproject.toml  setup.py
binder/: environment.yml
ci/: sectionate.yml
examples/: 1_creating_an_OSNAP_section.ipynb  2_OSNAP_transports_CM4p125.ipynb  2_OSNAP_transports_CM4p25.ipynb  3_Labrador_convergence_CM4p125.ipynb  3_Labrador_convergence_CM4p25.ipynb  5_MOC_transports_CM4p25.ipynb  6_MOC_transports_CM4p25_with_regionate.ipynb  Labrador_convergence_CM4p125.ipynb  OSNAP_CM4p125.ipynb  OSNAP_transports_CM4p125.ipynb  creating_an_OSNAP_section.ipynb  divergence_theorem_irregular_region.ipynb  example_dataset_grids.py  example_mom6.ipynb  example_mom6_OSNAP.ipynb
sectionate/: __init__.py  gridutils.py  hydro.py  section.py  tracers.py  transports.py  transports_C.py  version.py
sectionate/tests/: test_convergent_transport.py  test_section.py  test_section_cornercases.py
tests/: test_convergent_transport.py  test_section.py
